Refactor modals and UI components
- Convert modal titles and button names to sentence case
- Add missing semicolon
- Comment out unused add/edit record action for barcoding manifests
- Merge click event logic for new spreadsheet modal
- Update CSS for profile page
- Add missing success action
- Add modal and spreadsheet modal classes to set max height
- Make component name global in profile.js

--- a/src/apps/copo_file/templates/copo/copo_files.html
+++ b/src/apps/copo_file/templates/copo/copo_files.html
@@ -73,7 +73,7 @@
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
                             aria-hidden="true">&times;</span></button>
-                    <h4 class="modal-title">Move Data</h4>
+                    <h4 class="modal-title">Move data</h4>
                 </div>
                 <div class="modal-body">
                     <div id="url_upload_controls">
@@ -108,7 +108,7 @@
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
                             aria-hidden="true">&times;</span></button>
-                    <h4 class="modal-title">Upload File</h4>
+                    <h4 class="modal-title">Upload file</h4>
                 </div>
                 <div class="modal-body">
                     <div class="alert file-size-alert-warning warning-content" role="alert">
