--- a/src/apps/copo_profile/templates/copo/profile/copo_profile_index.html
+++ b/src/apps/copo_profile/templates/copo/profile/copo_profile_index.html
@@ -153,10 +153,10 @@
                 <div class="pull-right" style="padding-top: 9px;"> Sort by:</div>
             </div>
             <div class="col-xs-2 col-md-2 col-lg-2">
-                <select id="sortProfilesBtn" class="form-control" style="padding-bottom:10px">
-                    <option value="date_created">Date Created</option>
-                    <option value="title">Profile Title</option>
-                    <option value="type">Profile Type</option>
+                <select id="sortProfilesBtn" class="form-control" data-tour-id="sort_profiles_button">
+                    <option value="date_created">Date created</option>
+                    <option value="title">Profile title</option>
+                    <option value="type">Profile type</option>
                 </select>
             </div>
             <div class="col-xs-0 col-md-0 col-lg-0">
