--- a/src/apps/copo_read_submission/templates/copo/ena_read_manifest_validate.html
+++ b/src/apps/copo_read_submission/templates/copo/ena_read_manifest_validate.html
@@ -136,7 +136,7 @@
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
                             aria-hidden="true">&times;</span></button>
-                    <h4 class="modal-title">Move Data</h4>
+                    <h4 class="modal-title">Move data</h4>
                 </div>
                 <div class="modal-body">
                     <div id="url_upload_controls">
