fix: Layout of navigation bar on Manifests and Contact pages

--- a/src/apps/copo_landing_page/templates/secondary.html
+++ b/src/apps/copo_landing_page/templates/secondary.html
@@ -3,12 +3,7 @@
 
 {% block title %}{% endblock %}
 
-{% block javascript_block %}
-
-
-
-{% endblock %}
-
+{% block javascript_block %}{% endblock %}
 
 {% block css_block %}
  <style>
@@ -23,32 +18,18 @@
 
 
 {% block baseblock %}
+<section>
+    <div class="container-fluid zero-padding">
+        {% if user.is_authenticated %}
+            {% include 'nav_authenticated.html' %}
+        {% else %}
+            {% include 'nav_public.html' %}
+        {% endif %}
 
-
-
-    <section>
-        <div class="row">
-
-            <div id="main_banner" class="col-sm-7 col-md-7 col-lg-7 left-panel">
-                <div class="top-banner-light">{% block topbanner %}{% endblock %}</div>
-                <div class="secondary-container">
-                    {% block content %}
-
-
-
-                    {% endblock %}
-                </div>
-
-            </div>
-            <div class="col-sm-5 col-md-5 col-lg-5 zero-padding">
-                <!-- Top navigation bar -->
-                {% if user.is_authenticated %}
-                    {% include 'nav_authenticated.html' %}
-                {% else %}
-                    {% include 'nav_public.html' %}
-                {% endif %}
-            </div>
+        <div id="main_banner" class="col-sm-7 col-md-7 col-lg-7 left-panel">
+            <div class="top-banner-light">{% block topbanner %}{% endblock %}</div>
+            <div class="secondary-container">{% block content %}{% endblock %}</div>
         </div>
-
-    </section>
+    </div>
+</section>
 {% endblock %}
