--- a/static/assets/css/base_styles.css
+++ b/static/assets/css/base_styles.css
@@ -76,6 +76,7 @@ body {
 }
 
 .left-panel {
+  padding-left: 0 !important;
   padding-right: 0 !important;
   margin-right: 0 !important;
   min-height: 100vh !important;
