--- a/src/apps/copo_landing_page/templates/base1.html
+++ b/src/apps/copo_landing_page/templates/base1.html
@@ -20,6 +20,9 @@
     <![endif]-->
     <title>{% block title %}{% endblock %} | COPO</title>
 
+    <!-- Loader overlay style: displays full-page spinner while the page is loading -->
+    <link rel="stylesheet" href="{% static 'copo/css/copo/loader.css' %}">
+
     <link href="/static/assets/css/navbar.css" rel="stylesheet"/>
     <link href="/static/assets/css/base_styles.css" rel="stylesheet"/>
     <link href="/static/assets/css/base_banner.css" rel="stylesheet"/>
@@ -29,6 +32,8 @@
     <link href="/static/assets/css/bootstrap.css" rel="stylesheet"/>
     <link href="/static/copo/css/fontawesome/fontawesome-6.5.1.min.css" rel="stylesheet"/>
 
+    <!-- Displays a spinner overlay until the page fully loads -->
+    <script defer src="{% static 'copo/js/loader.js' %}"></script>
     <script src="{% static 'copo/js/jquery-3.7.1.min.js' %}"></script>
     <script src="{% static 'copo/semantic_ui/semantic.min.js' %}"></script>
     <script src="{% static 'copo/js/bootstrap.js' %}"></script>
@@ -79,6 +84,12 @@
 
 </head>
 <body>
+{% block loader_overlay %}
+<!-- Full-page loading overlay -->
+<div id="loaderOverlay">
+    <div class="copo-i-loader"></div>
+</div>
+{% endblock loader_overlay %}
 
 {% block baseblock %}
 {% endblock %}
